Added JavaScript file

--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <title>Pokemon Website - Phase 1</title>
     <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
-    <main>
-        <h1>Welcome to My Website</h1>
-    </main>
-    <script src="main.js"></script>
+    <h1>Pokemon</h1>
+    <script src="./main.js"></script>
 </body>
 
 </html>
