added pokemon names

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1 class="header">Pokemon</h1>
+    <h1 class="header"><span>Pokemon</span></h1>
     <div id="container"></div>
     <script src="./main.js"></script>
 </body>
