--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 class="header"><span>Pokemon</span></h1>
     <div id="container"></div>
     <button id="new-pokemon-btn">NEW POKEMON</button>
+    <button id="remove-pokemon-btn">REMOVE A POKEMON</button>
     <div id="roster">
         <div id="pokemon-1"></div>
         <div id="pokemon-2"></div>
