--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="container"></div>
     <button id="new-pokemon-btn">NEW POKEMON</button>
     <button id="remove-pokemon-btn">REMOVE A POKEMON</button>
+    <button id="rename-pokemon-btn">RENAME A POKEMON</button>
     <div id="roster">
         <div id="pokemon-1"></div>
         <div id="pokemon-2"></div>
