added more stuff

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <h1 class="header"><span>Pokemon</span></h1>
     <div id="container"></div>
+    <center>
     <button id="new-pokemon-btn">NEW POKEMON</button>
-    <button id="remove-pokemon-btn">REMOVE A POKEMON</button>
     <button id="rename-pokemon-btn">RENAME A POKEMON</button>
+    <button id="remove-pokemon-btn">REMOVE A POKEMON</button>
+    </center>
     <div id="roster">
         <div id="pokemon-1"></div>
         <div id="pokemon-2"></div>
