--- a/fundamentals.html
+++ b/fundamentals.html
@@ -8,7 +8,7 @@
 
 <body>
 
-        <script src="./fundamentals.js'></script>
+        <script src="./fundamentals.js"></script>
 </body>
 
 </html>
