Added basic content and removed JS

--- a/fundamentals.html
+++ b/fundamentals.html
@@ -7,8 +7,12 @@
 </head>
 
 <body>
-
-        <script src="./fundamentals.js"></script>
+    <h1 id="header"> JavaScript Fundamentals </h1>
+    <p id="para"> This is a paragraph </p>
+    <ul id="list-1">
+        
+    </ul>
+    <script src="./fundamentals.js"></script>
 </body>
 
 </html>
